--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,17 @@
 apply plugin: 'com.android.application'
 
+/**
+ * Use the property (key/value pairs format) file secrets.properties
+ * to configure api keys for your project.
+ * Here is the list of necessary keys:
+ * - DEBUG_THE_MOVIE_DB_API_KEY
+ * - RELEASE_THE_MOVIE_DB_API_KEY
+ */
+def Properties projectProperties = new Properties()
+projectProperties.load(new FileInputStream(new File(projectDir, '/secrets.properties')))
+
+final String THE_MOVIE_DB_API_KEY_NAME = "THE_MOVIE_DB_API_KEY"
+
 android {
     compileSdkVersion 25
     buildToolsVersion "25.0.2"
@@ -12,7 +24,13 @@ android {
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
+        debug {
+            buildConfigField "String", THE_MOVIE_DB_API_KEY_NAME, "\"" + projectProperties.DEBUG_THE_MOVIE_DB_API_KEY + "\""
+        }
+
         release {
+            buildConfigField "String", THE_MOVIE_DB_API_KEY_NAME, "\"" + projectProperties.RELEASE_THE_MOVIE_DB_API_KEY + "\""
+
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
