--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,9 +39,32 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
+
+    // Android Support Libraries
+    compile 'com.android.support:appcompat-v7:25.1.0'
+
+    // Networking Libs
+    compile 'com.google.code.gson:gson:2.8.0'
+    compile 'com.squareup.retrofit2:retrofit:2.1.0'
+    compile 'com.squareup.retrofit2:converter-gson:2.1.0'
+
+    // Reactive Libs
+    compile 'io.reactivex.rxjava2:rxjava:2.0.4'
+    compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
+    compile 'com.jakewharton.retrofit:retrofit2-rxjava2-adapter:1.0.0'
+
+    // Auto Values
+    annotationProcessor 'com.google.auto.value:auto-value:1.2-rc1'
+    annotationProcessor 'com.ryanharter.auto.value:auto-value-gson:0.4.5'
+    provided 'com.ryanharter.auto.value:auto-value-gson:0.4.5'
+
+    // Test Dependencies
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:appcompat-v7:25.1.0'
+
     testCompile 'junit:junit:4.12'
+
+    // Networking for Tests
+    testCompile 'com.squareup.okhttp3:mockwebserver:3.3.0'
 }
