--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,6 +70,7 @@ dependencies {
     })
     testCompile 'junit:junit:4.12'
 
-    // Networking for Tests
+    // Mocking Libs
     testCompile 'com.squareup.okhttp3:mockwebserver:3.3.0'
+    testCompile 'org.mockito:mockito-core:2.6.5'
 }
