--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,11 +48,15 @@ dependencies {
 
     // Android Support Libraries
     compile 'com.android.support:appcompat-v7:25.1.0'
+    compile 'com.android.support:recyclerview-v7:25.1.0'
 
     // Networking Libs
     compile 'com.google.code.gson:gson:2.8.0'
     compile 'com.squareup.retrofit2:retrofit:2.1.0'
     compile 'com.squareup.retrofit2:converter-gson:2.1.0'
+
+    // Image Handling
+    compile 'com.squareup.picasso:picasso:2.5.2'
 
     // Reactive Libs
     compile 'io.reactivex.rxjava2:rxjava:2.0.4'
