--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,14 +10,14 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".movies.presentation.MovieListActivity">
+        <activity android:name=".movies.presentation.view.MovieListActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".movies.presentation.MovieDetailActivity"></activity>
+        <activity android:name=".movies.presentation.view.MovieDetailActivity"></activity>
     </application>
 
 </manifest>
