chore: small xml tag cleaning on AndroidManifest
Signed-off-by: Eduardo Carrara <ecarrara.araujo@gmail.com>

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".movies.presentation.view.MovieDetailActivity"></activity>
+        <activity android:name=".movies.presentation.view.MovieDetailActivity"/>
     </application>
 
 </manifest>
