--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,6 +69,10 @@ dependencies {
     annotationProcessor 'com.ryanharter.auto.value:auto-value-gson:0.4.5'
     provided 'com.ryanharter.auto.value:auto-value-gson:0.4.5'
 
+    // Dependency Injection
+    compile 'com.jakewharton:butterknife:8.5.1'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
+
     // Test Dependencies
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
