--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,13 +13,17 @@ projectProperties.load(new FileInputStream(new File(projectDir, '/secrets.proper
 
 final String THE_MOVIE_DB_API_KEY_NAME = "THE_MOVIE_DB_API_KEY"
 
+ext {
+    ANDROID_SUPPORT_LIBS_VERSION = '26.0.1'
+}
+
 android {
-    compileSdkVersion 25
-    buildToolsVersion "25.0.2"
+    compileSdkVersion 26
+    buildToolsVersion ANDROID_SUPPORT_LIBS_VERSION
     defaultConfig {
         applicationId "br.com.ecarrara.popularmovies"
         minSdkVersion 19
-        targetSdkVersion 25
+        targetSdkVersion 26
         versionCode 2
         versionName "1.1"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -48,9 +52,9 @@ dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
 
     // Android Support Libraries
-    compile 'com.android.support:appcompat-v7:25.2.0'
-    compile 'com.android.support:recyclerview-v7:25.2.0'
-    compile 'com.android.support:cardview-v7:25.2.0'
+    compile "com.android.support:appcompat-v7:${ANDROID_SUPPORT_LIBS_VERSION}"
+    compile "com.android.support:recyclerview-v7:${ANDROID_SUPPORT_LIBS_VERSION}"
+    compile "com.android.support:cardview-v7:${ANDROID_SUPPORT_LIBS_VERSION}"
 
     // Networking Libs
     compile 'com.google.code.gson:gson:2.8.0'
