--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,6 +55,7 @@ dependencies {
     compile "com.android.support:appcompat-v7:${ANDROID_SUPPORT_LIBS_VERSION}"
     compile "com.android.support:recyclerview-v7:${ANDROID_SUPPORT_LIBS_VERSION}"
     compile "com.android.support:cardview-v7:${ANDROID_SUPPORT_LIBS_VERSION}"
+    compile "com.android.support:design:${ANDROID_SUPPORT_LIBS_VERSION}"
 
     // Networking Libs
     compile 'com.google.code.gson:gson:2.8.0'
