--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,6 +70,7 @@ dependencies {
     compile 'io.reactivex.rxjava2:rxjava:2.1.3'
     compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
     compile 'com.jakewharton.retrofit:retrofit2-rxjava2-adapter:1.0.0'
+    compile 'com.github.pwittchen:reactivenetwork-rx2:0.12.1'
 
     // Auto Values
     annotationProcessor 'com.google.auto.value:auto-value:1.2-rc1'
